[package]
name = "AdventOfCode2023"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "framework"
path = "src/framework.rs"

[[bin]]
name = "day1-a"
path = "src/day1/part-a.rs"

[[bin]]
name = "day1-b"
path = "src/day1/part-b.rs"

[[bin]]
name = "day2-a"
path = "src/day2/part-a.rs"

[[bin]]
name = "day2-b"
path = "src/day2/part-b.rs"

[[bin]]
name = "day3-a"
path = "src/day3/part-a.rs"

[[bin]]
name = "day3-b"
path = "src/day3/part-b.rs"

[[bin]]
name = "day4-a"
path = "src/day4/part-a.rs"

[[bin]]
name = "day4-b"
path = "src/day4/part-b.rs"

[[bin]]
name = "day5-a"
path = "src/day5/part-a.rs"

[[bin]]
name = "day5-b"
path = "src/day5/part-b.rs"

[[bin]]
name = "day6-a"
path = "src/day6/part-a.rs"

[[bin]]
name = "day6-b"
path = "src/day6/part-b.rs"

[dependencies]
